--- a/GetWebResources/GetWebResources.csproj
+++ b/GetWebResources/GetWebResources.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<OutputType>WinExe</OutputType>
+		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0-windows</TargetFramework>
 		<UseWPF>true</UseWPF>
 		<Platforms>x64</Platforms>
@@ -14,10 +14,11 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="CefSharp.Wpf.NETCore" Version="104.4.180" />
 		<PackageReference Include="MaterialDesignThemes" Version="4.5.0" />
+		<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1293.44" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="Serilog" Version="2.11.0" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
 		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
 	</ItemGroup>
 
@@ -39,6 +40,10 @@
 
 	<ItemGroup>
 		<PackageReference Update="chromiumembeddedframework.runtime.win-x86" Version="104.4.18" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Handle\" />
 	</ItemGroup>
 
 </Project>
