--- a/GetWebResources/GetWebResources.csproj
+++ b/GetWebResources/GetWebResources.csproj
@@ -6,15 +6,12 @@
 		<UseWPF>true</UseWPF>
 		<Platforms>x64</Platforms>
 		<ApplicationIcon>favicon.ico</ApplicationIcon>
-
-		<RuntimeIdentifier Condition="'$(RuntimeIdentifier)' == ''">win-x64</RuntimeIdentifier>
-		<SelfContained Condition="'$(SelfContained)' == ''">false</SelfContained>
 	</PropertyGroup>
 
-
-
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
 		<PackageReference Include="MaterialDesignThemes" Version="4.5.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1293.44" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="Serilog" Version="2.11.0" />
@@ -22,10 +19,7 @@
 		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
 	</ItemGroup>
 
-	<ItemGroup>
-		<None Update="Config\setting.json">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</None>
+	<ItemGroup>		
 		<None Update="Config\settings.json">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
@@ -33,17 +27,4 @@
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Update="chromiumembeddedframework.runtime.win-x64" Version="104.4.18" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Update="chromiumembeddedframework.runtime.win-x86" Version="104.4.18" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Handle\" />
-	</ItemGroup>
-
 </Project>
